[package]
name = "leb_warn"
version = "0.1.2"
edition = "2021"

[dependencies]
tokio = { version = "1.24", features = ["macros", "rt-multi-thread"] }
serenity = { default-features = false, features = ["client", "gateway", "model", "rustls_backend"], version = "0.11"}
chrono = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "*"
structstruck = "0.3.0"
