[package]
name = "leb_warn"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio = { version = "1.24", features = ["macros", "rt-multi-thread"] }
serenity = { default-features = false, features = ["client", "gateway", "model", "rustls_backend"], version = "0.11"}
chrono = {version = "0.4", features = ["serde"]}
serde = "1.0"
serde_derive = "1.0"
serde_json = "*"
structstruck = "0.3.0"
